--- a/WebGL/conversor_obj_para_json.html
+++ b/WebGL/conversor_obj_para_json.html
@@ -216,7 +216,7 @@ function doLoadObj(text)
 </head>
 
 
-<body onload="loadObj('gunship.obj');">
+<body onload="loadObj('Bullet2.obj');">
 </body>
 
 </html>
