--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -8,6 +8,11 @@
 		<script type="text/javascript" src="randomutilities.js"></script>
 		
 		<script type="text/javascript" src="spaceship.js"></script>
+		<script type="text/javascript" src="alien.js"></script>
+		<script type="text/javascript" src="Alien_Shot.js"></script>
+		<script type="text/javascript" src="Asteroid.js"></script>
+		<script type="text/javascript" src="Spaceship_shot.js"></script>
+		
 		<script type="text/javascript" src="main.js"></script>
 		
 		
