--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="Alien_Shot.js"></script>
 		<script type="text/javascript" src="Asteroid.js"></script>
 		<script type="text/javascript" src="Spaceship_shot.js"></script>
+		<script type="text/javascript" src="Explosion.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
 		
