--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -14,9 +14,9 @@
 		
 		<script type="text/javascript" src="spaceship.js"></script>
 		<script type="text/javascript" src="alien.js"></script>
-		<script type="text/javascript" src="Alien_Shot.js"></script>
+		<script type="text/javascript" src="AlienShot.js"></script>
 		<script type="text/javascript" src="Asteroid.js"></script>
-		<script type="text/javascript" src="Spaceship_shot.js"></script>
+		<script type="text/javascript" src="SpaceshipShot.js"></script>
 		<script type="text/javascript" src="Explosion.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
