desenha as vidas no ecrã, tentativa de font

--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="textures.js"></script>
 		<script type="text/javascript" src="worldupdate.js"></script>
 		<script type="text/javascript" src="controls.js"></script>
+		<script type="text/javascript" src="Font.js"></script>
 		
 		<script type="text/javascript" src="spaceship.js"></script>
 		<script type="text/javascript" src="alien.js"></script>
