--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="SpaceshipShot.js"></script>
 		<script type="text/javascript" src="Explosion.js"></script>
 		<script type="text/javascript" src="Planet.js"></script>
+		<script type="text/javascript" src="Skybox.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
 		
