--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -193,6 +193,8 @@ varying vec3 dohalfVec;
 void main() {
 	if(shadowOn == 1){
 		gl_FragColor = vec4(0.5, 0.5, 0.5, 0.1);
+		//DEPTH TO COLOR - foi util
+		//gl_FragColor = vec4(length(doeye.z)/100.0, length(doeye.z)/100.0, length(doeye.z)/100.0, 1.0);
 		return;
 	}
 	vec3 finalColor = vec3(0.0, 0.0, 0.0);
