--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -21,6 +21,7 @@
 		<script type="text/javascript" src="Explosion.js"></script>
 		<script type="text/javascript" src="Planet.js"></script>
 		<script type="text/javascript" src="Skybox.js"></script>
+		<script type="text/javascript" src="LensFlare.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
 		
