--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -194,7 +194,13 @@ varying vec3 dohalfVec;
 
 void main() {
 	if(shadowOn == 1){
-		gl_FragColor = vec4(0.1, 0.1, 0.1, 0.9);
+		if(mod(floor(gl_FragCoord.x/2.0),2.0) == 0.0 ^^ mod(floor(gl_FragCoord.y/2.0),2.0) == 0.0){
+			discard;
+		}
+		else{
+			gl_FragColor = vec4(0, 0, 0, 0.5);
+			
+		}
 		//DEPTH TO COLOR - foi util
 		//gl_FragColor = vec4(length(doeye.z)/100.0, length(doeye.z)/100.0, length(doeye.z)/100.0, 1.0);
 		return;
