--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src="Skybox.js"></script>
 		<script type="text/javascript" src="LensFlare.js"></script>
 		<script type="text/javascript" src="Mirror.js"></script>
+		<script type="text/javascript" src="Portal.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
 		
