--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="worldupdate.js"></script>
 		<script type="text/javascript" src="controls.js"></script>
 		<script type="text/javascript" src="Font.js"></script>
+		<script type="text/javascript" src="Audio.js"></script>
 		
 		<script type="text/javascript" src="spaceship.js"></script>
 		<script type="text/javascript" src="alien.js"></script>
