--- a/WebGL/conversor_obj_para_json.html
+++ b/WebGL/conversor_obj_para_json.html
@@ -220,7 +220,7 @@ function doLoadObj(text)
 </head>
 
 
-<body onload="loadObj('balls.obj');">
+<body onload="loadObj('trumphair.obj');">
 </body>
 
 </html>
