--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="randomutilities.js"></script>
 		<script type="text/javascript" src="cameras.js"></script>
 		<script type="text/javascript" src="textures.js"></script>
+		<script type="text/javascript" src="guy.js"></script>
 		<script type="text/javascript" src="worldupdate.js"></script>
 		<script type="text/javascript" src="controls.js"></script>
 		<script type="text/javascript" src="Font.js"></script>
