--- a/Stereo/conversor_obj_para_json.html
+++ b/Stereo/conversor_obj_para_json.html
@@ -220,7 +220,7 @@ function doLoadObj(text)
 </head>
 
 
-<body onload="loadObj('freehand_shuttle.obj');">
+<body onload="loadObj('alienlow.obj');">
 </body>
 
 </html>
